# agenthive

./: .gitignore  README.md
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py  redis_client.py  security.py
apps/api/app/models/: project.py  task.py  user.py
apps/api/app/routers/: auth.py  projects.py  tasks.py  users.py
apps/api/app/schemas/: project.py  task.py  user.py
apps/api/tests/: conftest.py  test_auth.py
apps/web/: package-lock.json  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/login/: route.ts
apps/web/src/app/api/logout/: route.ts
apps/web/src/app/api/register/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: navigation.tsx  theme-toggle.tsx
